# agent-reliability-probe

./: .gitignore  EXPERIMENT.md  LICENSE  README.md  SOURCES.md  pyproject.toml
.github/workflows/: ci.yml
data/scenarios/: hard_mode.json  sample_business.json
docs/: index.html  post1.html  post2.html  post3.html
results/: classify_failures.py  compile_master.py  failure_features.py  make_chart.py  make_chart2.py  make_master_charts.py  master_dataset.json  retail_gemini_vs_kimi.md  taxonomy.json
scripts/: tau2_resumable.py  tau2_scale_run.py
src/agent_reliability_probe/: __init__.py  cli.py  experiment.py  metrics.py  profile.py  providers.py  reproduce.py  runner.py  scenarios.py
src/agent_reliability_probe/agents/: __init__.py  _adk.py  base.py  direct.py  react.py  skill.py  spec.py
src/agent_reliability_probe/integrations/: __init__.py  tau2.py
tests/: test_agents.py  test_experiment.py  test_metrics.py  test_profile.py  test_scenarios.py  test_spec.py
